--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@nextui-org/theme": "2.2.5",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
+		"@reduxjs/toolkit": "^2.2.7",
 		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
@@ -30,7 +31,8 @@
 		"next-intl": "^3.17.2",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
-		"react-dom": "18.3.1"
+		"react-dom": "18.3.1",
+		"react-redux": "^9.1.2"
 	},
 	"devDependencies": {
 		"@types/node": "20.5.7",
